--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,11 @@
   display: none;
 }
 
+.blank{
+  margin-bottom: 50px; 
+  background-color: #f5f5f5;
+}
+
 /*map.bladeのスタイル*/
 #headline{
   color: #333399;
@@ -75,7 +80,7 @@
   background: #333399; 
   color: white;
   width: 50%;
-  padding: 13px 0;
+  padding: 13px 18px;
   font-weight: bold;
 }
 
@@ -110,7 +115,7 @@
 }
 
 .body textarea,
-.reviewpost input[type="submit"] {
+input[type="submit"] {
   margin-bottom: 10px;
   width: 80%; 
   padding: 8px; 
@@ -118,6 +123,16 @@
   border: 1px solid #ddd; /* 枠線を追加 */
   border-radius: 5px; 
   box-sizing: border-box; /* 枠線を含んだサイズとして設定 */
+}
+
+input[type="submit"]{
+  background-color: #333399;
+  color: white;
+}
+
+ input[type="submit"]:hover{
+  /* ボタンのホバースタイル */
+  background-color: #4b4bad;
 }
 
 .store_name input[type="text"]{
@@ -128,18 +143,8 @@
   color: white;
 }
 
-.reviewpost input[type="submit"]{
-  background-color: #333399;
-  color: white;
-}
-
 .store_name input[type="text"]:read-only {
   cursor: not-allowed;  /*カーソルを許可されていない状態に設定 */
-}
-
-.reviewpost input[type="submit"]:hover {
-  /* ボタンのホバースタイル */
-  background-color: #4b4bad;
 }
 
 .body textarea {
@@ -200,10 +205,10 @@
   font-size: 140%;
   margin-top: 20px;
   margin-bottom: 15px;
-  background: skyblue;
+  background: #6495ed;
   color: white;
-  width: 35%;
-  padding: 13px 0;
+  width: 50%;
+  padding: 13px 20px;
   font-weight: bold;
 }
 
@@ -220,7 +225,7 @@
   font-size: 110%;
   margin-bottom: 10px;
   text-decoration: none;
- color: #333399 ;  
+  color: #333399 ;  
   font-weight: bold;
 }
 
